labour/test/invalid/rule_3_violation.labour
bouldering_wall "Wall3" {
  routes [ bouldering_route "Route1" { grade: "5A", grid_base_point { x: 0, y: 0 }, holds ["0001", "0002", "0003", "0004"] } ],
  volumes [ circle { pos: { x: 0, y: 0 }, depth: 10, radius: 50, front_holds [
    hold "0001" { pos: { x: 0, y: 0 }, shape: "1", colours [white], start_hold: 1 },
    hold "0002" { pos: { x: 10, y: 10 }, shape: "2", colours [white], start_hold: 2 },
    hold "0003" { pos: { x: 20, y: 20 }, shape: "3", colours [white], start_hold: 2 },
    hold "0004" { pos: { x: 30, y: 30 }, shape: "4", colours [white] }
  ] } ]
}